# netimate

./: .gitignore  .importlinter.ini  MANIFEST.in  README.md  bump_version.py  devices.yaml  docker-compose.yml  makefile  pyproject.toml  settings.yaml  settings.yaml.netbox-example
.github/workflows/: ci.yml  release.yml
netimate/: __main__.py  composition.py
netimate/application/: application.py  command_executor_service.py  snapshot_service.py
netimate/core/: runner.py
netimate/core/plugin_engine/: loader.py  plugin_registry.py  registrar.py
netimate/errors/: __init__.py  application.py  base.py  cli.py  command.py  config.py  connection.py  plugin.py  registry.py  runner.py  shell.py
netimate/infrastructure/: config_loader.py  logging.py  settings.py
netimate/infrastructure/template_provider/: filesystem.py
netimate/infrastructure/utils/: file_management.py
netimate/interfaces/application/: application.py
netimate/interfaces/core/: registry.py  runner.py
netimate/interfaces/infrastructure/: settings.py  template_provider.py
netimate/interfaces/plugin/: connection_protocol.py  device_command.py  device_repository.py  plugin.py
netimate/models/: device.py
netimate/plugins/connection_protocols/netmiko/: ssh.py  telnet.py
netimate/plugins/connection_protocols/scrapli/: asyncssh.py
netimate/plugins/device_commands/: echo_test.py  show_environment.py  show_ip_interface_brief.py  show_logging.py  show_memory_stats.py  show_process_cpu.py  show_running_config.py  show_version.py
netimate/plugins/device_commands/templates/ios/: cisco_ios_show_memory_stats.textfsm
netimate/plugins/device_repositories/: netbox.py  postgres.py  yaml.py
netimate/view/cli/: cli.py
netimate/view/shell/: parsers.py  progress_printer.py  shell_session.py
tests/: conftest.py  outputs.py
tests/fakes/: fake_async.py  fake_async_error.py  plugin_one.py
tests/integration/: test_cli.py  test_shell_boot.py  test_shell_commands.py  test_shell_logging.py
tests/unit/test_application/: test_application.py  test_command_executor_service.py  test_snapshot_service.py
tests/unit/test_core/: test_config_loader.py  test_interface_base.py  test_interface_command.py  test_interface_device_repo.py  test_interface_protocol.py  test_logging.py  test_parsers.py  test_plugin_loader.py  test_plugin_registrar.py  test_progress_printer.py  test_registry.py  test_runner.py
tests/unit/test_errors/: test_defaults.py
tests/unit/test_infrastructure/: test_filesystem.py  test_settings.py  test_utils.py
tests/unit/test_plugins/: test_device_commands.py  test_netbox_device_repository.py  test_netmiko_ssh_connection_protocol.py  test_netmiko_telnet_connection_protocol.py  test_postgres_repository.py  test_scrapli_asyncssh_connection_protocol.py  test_yaml_repository.py
tests/unit/test_view/: test_shell_basic.py
